[gd_scene load_steps=5 format=3 uid="uid://bmqixs5ucqrlv"]

[ext_resource type="Script" path="res://scenes/titlescreen.gd" id="1_2gnf2"]
[ext_resource type="Texture2D" uid="uid://d15ko8vlj3dfq" path="res://assets/starbucks.jpg" id="2_2wp2k"]
[ext_resource type="Theme" uid="uid://bn22c4i68u7ed" path="res://basictext.tres" id="2_hnomf"]
[ext_resource type="Texture2D" uid="uid://50hkqddqitsu" path="res://assets/gortbig.png" id="3_ga78w"]

[node name="titlescreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2gnf2")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1280.0
texture = ExtResource("2_2wp2k")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -49.0
offset_top = -74.0
offset_right = 1947.0
offset_bottom = 1283.0
mouse_filter = 2
color = Color(0, 0, 0, 0.745098)

[node name="title" type="Label" parent="."]
offset_left = 919.0
offset_top = 82.0
offset_right = 1784.0
offset_bottom = 183.0
theme = ExtResource("2_hnomf")
theme_override_colors/font_shadow_color = Color(1, 0.741176, 0.843137, 1)
theme_override_colors/font_outline_color = Color(0.223529, 0.701961, 0.886275, 1)
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 30
theme_override_font_sizes/font_size = 64
text = "coolest game in the world"

[node name="label" type="Label" parent="."]
offset_left = 98.0
offset_top = 66.0
offset_right = 379.0
offset_bottom = 89.0
theme = ExtResource("2_hnomf")
text = "enter players, seperated by commas"

[node name="names_field" type="TextEdit" parent="."]
offset_left = 96.0
offset_top = 99.0
offset_right = 424.0
offset_bottom = 145.0
theme = ExtResource("2_hnomf")

[node name="names_display" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1095.0
offset_top = 273.0
offset_right = 1731.0
offset_bottom = 1028.0
grow_horizontal = 0
theme = ExtResource("2_hnomf")
theme_override_font_sizes/font_size = 48

[node name="ready_button" type="Button" parent="."]
offset_left = 97.0
offset_top = 163.0
offset_right = 224.0
offset_bottom = 204.0
theme = ExtResource("2_hnomf")
text = "start game"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 123.0
offset_top = 266.0
offset_right = 934.0
offset_bottom = 1078.0
texture = ExtResource("3_ga78w")

[connection signal="text_changed" from="names_field" to="." method="_on_names_field_text_changed"]
[connection signal="pressed" from="ready_button" to="." method="_on_submit_button_pressed"]
